--- a/newstyle.css
+++ b/newstyle.css
@@ -7,15 +7,6 @@ body {
 
 }
 
-div {
-	border-radius: 0px;
-	border: 0px solid #6C06A2;
-	background-color: #6C06A2;
-	height: 20px;
-	width: 120px;
-	margin: auto;
-	text-align: center;
-}
 a {
 	text-decoration: none;
 	color: #C2DA09;
@@ -25,6 +16,13 @@ a {
 span {
 	font-weight: bold;
 	font-size: 18px;
-    color: #ffffff;
+    color: #521D4E;
+}
+
+.button {
+	margin: 10px;
+	background-color: #521D4E;
+	margin: center;
+
 }
 
