--- a/newstyle.css
+++ b/newstyle.css
@@ -19,14 +19,30 @@ span {
     color: #521D4E;
 }
 
-button {
-	margin: 10px;
-	background-color: #521D4E;
-	height: 25px;
-	width: 100px;
-	margin: center;
-	display: inline-block;
-
+h3 {
+	text-decoration: none;
+	color: #C1DA08;
+	font-family:Verdana, Tahoma, sans-serif;
 
 }
 
+p {
+	text-decoration: none;
+	font-size: 14px;
+	color: #C1DA08;
+	font-family:Verdana, Tahoma, sans-serif;
+
+}
+
+.center {
+	margin:auto;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: left;
+    background-color:#521D4E;
+    text-decoration: none;
+	color: #C1DA08;
+    font-family: Verdana, sans-serif;
